namespace BankOfMyHouse.Domain.Iban.Interfaces;
public interface IIbanGenerator
{
    IbanCode GenerateItalianIban();
}
